--- a/index.html
+++ b/index.html
@@ -56,19 +56,20 @@
         <button id="finish-button" type="button" class="hidden">Selesai</button>
     </section>
 
-
-    <!-- Left Choice Screen -->
     <section id="left-slide" class="screen hidden">
-        <h2 class="anniversary-title-slide">You're Special</h2>
+        <h2 class="anniversary-title-slide">One Year Anniversary</h2>
         <article class="photo-container">
             <img src="./img/foto_5.jpg" alt="Special Memory" class="single-photo">
             <div class="anniversary-message">
                 <div class="message-box">
-                <p>hi my woman, thank you for everything you have given me during this one year, many lessons from you
-                    that have changed everything to be close to the word perfect, a billion words of gratitude that I
-                    say. you will always be the only woman that I always love and always worry about forever, my last
-                    love forever, maryam.</p>
-            </div>
+                    <p>Hi, this is Maryam, my woman who is so beautiful from the inside out, with a kindness that always
+                        radiates warmth and sincerity. She is a figure who has taught me many things, made every day
+                        more meaningful, and brought happiness that I never expected before. In this one year, she has
+                        become the most beautiful gift that makes my whole life much closer to the word perfect. Maryam,
+                        1,000 days are not enough to explain how ordinary you are in my eyes. You are the woman I always
+                        love, I am grateful for, and I worry about. You are the only one who makes me want to continue
+                        to grow and be better. My last love, my love forever.</p>
+                </div>
         </article>
         <button id="back-button-left" type="button">Back</button>
     </section>
@@ -79,16 +80,16 @@
             <img src="./img/foto_6.jpg" alt="Special Memory" class="single-photo">
             <div class="anniversary-message">
                 <div class="message-box">
-                <p>It's been a year since we've been in this relationship full of laughter, love, and happiness. I'm so
-                    grateful to have you by my side. Thank you for all your endless love, attention, and support. You
-                    are the best partner I've ever dreamed of, and I always feel lucky to be able to live my life with
-                    you. Please continue to be like this and remember our initial intention to build this relationship
-                    to move to a more serious level. My prayer on this anniversary is that you will remain the same as
-                    you are now forever, even better, and I can be with you for the rest of my life. I also want to
-                    apologize if I still have many shortcomings, but I promise to always improve myself for you and our
-                    relationship, because you are one of the reasons I continue to grow and become the best version of
-                    myself.</p>
-            </div>
+                    <p>It's been a year since we've been in a relationship full of laughter, love, and happiness. I'm so
+                        grateful to have you by my side. Thank you for all your endless love, attention, and support.
+                        You are the best partner I could ever dream of, and I always feel lucky to be able to live my
+                        life with you. Please continue to be like this and remember our initial intention to build this
+                        relationship to a more serious level. My prayer on this anniversary is that you will remain the
+                        same as you are now forever, even better, and I can be with you until the end of my life. I also
+                        want to apologize if I still have many shortcomings, but I promise to always improve myself for
+                        you and our relationship, because you are one of the reasons I continue to grow and become the
+                        best version of myself, I love you more forever.</p>
+                </div>
         </article>
         <button id="back-button-right" type="button">Back</button>
     </section>
