--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </section>
 
     <section id="left-slide" class="screen hidden">
-        <h2 class="anniversary-title-slide">One Year Anniversary</h2>
+        <h2 class="anniversary-title-slide">You're Special</h2>
         <article class="photo-container">
             <img src="./img/foto_5.jpg" alt="Special Memory" class="single-photo">
             <div class="anniversary-message">
