--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
             <img src="./img/foto_5.jpg" alt="Special Memory" class="single-photo">
             <div class="anniversary-message">
                 <div class="message-box">
-                    <p>Hi, this is Maryam, my woman who is so beautiful from the inside out, with a kindness that always
+                    <p>Hi, this is Maryam, my woman who is so beautiful in body and soul, with a kindness that always
                         radiates warmth and sincerity. She is a figure who has taught me many things, made every day
-                        more meaningful, and brought happiness that I never expected before. In this one year, she has
-                        become the most beautiful gift that makes my whole life much closer to the word perfect. Maryam,
-                        1,000 days are not enough to explain how ordinary you are in my eyes. You are the woman I always
-                        love, I am grateful for, and I worry about. You are the only one who makes me want to continue
-                        to grow and be better. My last love, my love forever.</p>
+                        feel more meaningful, and brought happiness that I never expected before. In this one year, she
+                        has become the most beautiful gift that has made my whole life much closer to the word perfect.
+                        Maryam, a thousand days are not enough to explain how extraordinary you are in my eyes. You are
+                        the woman I always love, am grateful for, and worry about. You are the only one who makes me
+                        want to continue to grow and become better. My last love, my love forever.</p>
                 </div>
         </article>
         <button id="back-button-left" type="button">Back</button>
